# messaging

./: Cargo.toml
api/: Cargo.toml
api/src/: main.rs  routes.rs
cli/: Cargo.toml
cli/src/: main.rs
clicksend/: Cargo.toml
clicksend/src/: api.rs  error.rs  lib.rs  validators.rs
clicksend/src/clicksend/: client.rs  mock.rs  mod.rs
clicksend/tests/: integration_test.rs
queue/: Cargo.toml
queue/src/: error.rs  lib.rs  publisher.rs
shared/: Cargo.toml
shared/src/: lib.rs
workers/: Cargo.toml
