[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
clicksend = { path = "../clicksend" }
queue = { path = "../queue" }
shared = { path = "../shared" }
axum = "0.7.7"
serde = { version = "1.0.214", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.20", features = ["derive"] }
dotenv = "0.15.0"
rand = "0.8.5"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
