[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
config = "0.14.1"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
clicksend = { path = "../clicksend" }
dirs = "5.0.1"
indicatif = "0.17.8"
colored = "2.1.0"
