[package]
name = "queue"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
clicksend = { path = "../clicksend" }
shared = { path = "../shared" }
lapin = "2.5.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
